# -AndriKovalchuk-Home_Work_WEB_9_Scrapy

./: pyproject.toml
Scrapy_project/Scrapy_project/: settings.py
Scrapy_project/Scrapy_project/spiders/: authors.json  main.py  quotes.json
back-up/: authors.py
