[tool.poetry]
name = "module-9-scrapy"
version = "0.1.0"
description = ""
authors = ["AndriKovalchuk <andrii.kovalchuk90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
